newyork data evaluation

--- a/new_york_experiments/baselines/elastic_search_newyork_bm25.ipynb
+++ b/new_york_experiments/baselines/elastic_search_newyork_bm25.ipynb
@@ -76,7 +76,7 @@
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
     "              #\"fields\": [\"tablePgTitle\"] \n",
-    "              \"fields\": [\"table_page_title\"] \n",
+    "              \"fields\": [\"table_page_title\",\"table_page_content\",\"table_page_keywords\"] \n",
     "              #\"fields\": [tableField]\n",
     "            }\n",
     "        }\n",
@@ -144,12 +144,12 @@
     "        article_keywords = str(row['article_keywords'])\n",
     "        article_main_passage = str(row['article_main_passage'][0:1000])\n",
     "        \n",
-    "        catch = article_page_title+\" \"+article_page_meta_description+\" \"+article_keywords\n",
+    "        catch = article_page_title+\" \"+article_main_passage+\" \"+article_keywords\n",
     "        \n",
     "        table_url = row['article_key_match'] \n",
     "        articl_key = table_url\n",
     "        \n",
-    "        result = searchIndexing(article_page_title,tableField,topK)\n",
+    "        result = searchIndexing(catch,tableField,topK)\n",
     "\n",
     "        if result['hits']['total'] > 0:\n",
     "\n",
@@ -177,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "tableField = [\"table_page_title\",\"table_page_content\",\"table_page_full_text\",\"table_page_summary\",\"table_page_keywords\",\"table_caption\",\"table_header\",\"table_body\"]\n",
-    "topK = [1,5,10,20]"
+    "topK = [1,5,10,20,30,50,70,100]"
    ]
   },
   {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +220,28 @@
      "text": [
       "\n",
       "Acc@1\n",
-      "0.2905\n",
+      "0.4797\n",
       "\n",
       "Acc@5\n",
-      "0.4324\n",
+      "0.6824\n",
       "\n",
       "Acc@10\n",
-      "0.5203\n",
+      "0.75\n",
       "\n",
       "Acc@20\n",
-      "0.5811\n"
+      "0.8041\n",
+      "\n",
+      "Acc@30\n",
+      "0.8446\n",
+      "\n",
+      "Acc@50\n",
+      "0.8919\n",
+      "\n",
+      "Acc@70\n",
+      "0.9122\n",
+      "\n",
+      "Acc@100\n",
+      "0.9189\n"
      ]
     }
    ],
