--- a/new_york_experiments/baselines/model_doc2vec.ipynb
+++ b/new_york_experiments/baselines/model_doc2vec.ipynb
@@ -22,10 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
-    "\n",
-    "tables = pd.read_csv('../dataset/distinct_tables_allsignals.csv', delimiter=',', keep_default_na=False)\n",
-    "tables = tables.drop(tables[tables.table_page_title == \"\"].index)"
+    "articles = pd.read_csv('../dataset/test_articles_dataset_newyork.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = pd.read_csv('../dataset/data_tables_all_signal_newyork.csv', delimiter=',', keep_default_na=False)"
    ]
   },
   {
@@ -50,7 +48,41 @@
     }
    ],
    "source": [
-    "embedding_model = Doc2Vec.load('../pre_trained_models/doc2vec.bin')"
+    "embedding_model = Doc2Vec.load('../../pre_trained_models/doc2vec.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 52426 entries, 0 to 52425\n",
+      "Data columns (total 13 columns):\n",
+      "table_body                     52426 non-null object\n",
+      "table_caption                  52426 non-null object\n",
+      "table_domain_score             52426 non-null float64\n",
+      "table_header                   52426 non-null object\n",
+      "table_page_content             52426 non-null object\n",
+      "table_page_full_text           52426 non-null object\n",
+      "table_page_keywords            52426 non-null object\n",
+      "table_page_meta_description    52426 non-null object\n",
+      "table_page_meta_keywords       52426 non-null object\n",
+      "table_page_summary             52426 non-null object\n",
+      "table_page_tags                52426 non-null object\n",
+      "table_page_title               52426 non-null object\n",
+      "table_page_url                 52426 non-null object\n",
+      "dtypes: float64(1), object(12)\n",
+      "memory usage: 5.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tables.info()"
    ]
   },
   {
@@ -62,7 +94,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85900it [06:42, 213.43it/s]\n"
+      "52426it [02:59, 292.46it/s]\n"
      ]
     }
    ],
@@ -73,22 +105,15 @@
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
     "    table_title = row['table_page_title']\n",
-    "    table_page_summary = row['table_page_summary']\n",
-    "    table_page_keywords = row['table_page_keywords']\n",
+    "    table_page_cotent = row['table_page_content'][0:1000]\n",
+    "#     table_page_keywords = row['table_page_keywords']\n",
     "    \n",
-    "    vector_words = tknzr.tokenize(table_title+ \" \"+table_page_summary+\" \"+table_page_keywords)\n",
+    "    vector_words = tknzr.tokenize(table_title+\" \"+table_page_cotent)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
-    "    tables_ids.append(row['table_id'])\n",
+    "    tables_ids.append(row['table_page_url'])\n",
     "    tables_vector.append(word_embedding) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -96,10 +121,41 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 148 entries, 0 to 147\n",
+      "Data columns (total 10 columns):\n",
+      "article_full_text           148 non-null object\n",
+      "article_key_match           148 non-null object\n",
+      "article_keywords            148 non-null object\n",
+      "article_main_passage        148 non-null object\n",
+      "article_meta_description    148 non-null object\n",
+      "article_meta_keywords       148 non-null object\n",
+      "article_summary             148 non-null object\n",
+      "article_tags                148 non-null object\n",
+      "article_title               148 non-null object\n",
+      "article_url                 148 non-null object\n",
+      "dtypes: object(10)\n",
+      "memory usage: 11.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "articles.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:04, 213.24it/s]\n"
+      "148it [00:00, 166.78it/s]\n"
      ]
     }
    ],
@@ -109,15 +165,15 @@
     "\n",
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_page_title = row['page_title']\n",
-    "    article_page_meta_description = row['summary']\n",
-    "    article_keywords = row['keywords']\n",
+    "    article_page_title = row['article_title']\n",
+    "    article_main_passage = row['article_main_passage'][0:1000]\n",
+    "#     article_keywords = row['keywords']\n",
     "         \n",
     "    #embedding\n",
-    "    vector_words = tknzr.tokenize(article_page_title+\" \"+article_page_meta_description+\" \"+article_keywords)\n",
+    "    vector_words = tknzr.tokenize(article_page_title+\" \"+article_main_passage)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
-    "    articles_ids.append(row['page_id'])\n",
+    "    articles_ids.append(row['article_key_match'])\n",
     "    articles_vector.append(word_embedding)"
    ]
   },
@@ -130,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [05:55<00:00,  2.91it/s]\n"
+      "100%|██████████| 148/148 [00:27<00:00,  5.42it/s]\n"
      ]
     }
    ],
@@ -226,9 +282,9 @@
     "    for accuracyK in topK:\n",
     "        \n",
     "        selected_top = df_tables_sorting.head(accuracyK)\n",
-    "        min_score = selected_top['table_score'].max()\n",
-    "        draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
-    "        final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "        #min_score = selected_top['table_score'].max()\n",
+    "        #draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
+    "        final_ranked_tables = selected_top.iloc[:,0:1].values\n",
     "        \n",
     "        accuracy_value = getAccuracy(final_ranked_tables,idQueryGoal)\n",
     "        \n",
@@ -238,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1101\n",
-      "0.192\n",
-      "0.2437\n",
-      "0.2934\n"
+      "0.1622\n",
+      "0.3514\n",
+      "0.4257\n",
+      "0.527\n"
      ]
     }
    ],
