--- a/new_york_experiments/baselines/model_universal_sentence_encoder.ipynb
+++ b/new_york_experiments/baselines/model_universal_sentence_encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,22 +35,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
-    "\n",
-    "tables = pd.read_csv('../dataset/distinct_tables_allsignals.csv', delimiter=',', keep_default_na=False)\n",
-    "tables = tables.drop(tables[tables.table_page_title == \"\"].index)"
+    "articles = pd.read_csv('../dataset/test_articles_dataset_newyork.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = pd.read_csv('../dataset/data_tables_all_signal_newyork.csv', delimiter=',', keep_default_na=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 148 entries, 0 to 147\n",
+      "Data columns (total 10 columns):\n",
+      "article_full_text           148 non-null object\n",
+      "article_key_match           148 non-null object\n",
+      "article_keywords            148 non-null object\n",
+      "article_main_passage        148 non-null object\n",
+      "article_meta_description    148 non-null object\n",
+      "article_meta_keywords       148 non-null object\n",
+      "article_summary             148 non-null object\n",
+      "article_tags                148 non-null object\n",
+      "article_title               148 non-null object\n",
+      "article_url                 148 non-null object\n",
+      "dtypes: object(10)\n",
+      "memory usage: 11.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "articles.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,13 +92,13 @@
     "\n",
     "for i, row in articles.iterrows():\n",
     "    \n",
-    "    articles_id.append(row['page_id'])\n",
-    "    articles_title.append(row['page_title']+\" \"+row['summary']+\" \"+row['keywords'])"
+    "    articles_id.append(row['article_key_match'])\n",
+    "    articles_title.append(row['article_title']+\" \"+row['article_main_passage'][0:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,10 +127,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 52426 entries, 0 to 52425\n",
+      "Data columns (total 13 columns):\n",
+      "table_body                     52426 non-null object\n",
+      "table_caption                  52426 non-null object\n",
+      "table_domain_score             52426 non-null float64\n",
+      "table_header                   52426 non-null object\n",
+      "table_page_content             52426 non-null object\n",
+      "table_page_full_text           52426 non-null object\n",
+      "table_page_keywords            52426 non-null object\n",
+      "table_page_meta_description    52426 non-null object\n",
+      "table_page_meta_keywords       52426 non-null object\n",
+      "table_page_summary             52426 non-null object\n",
+      "table_page_tags                52426 non-null object\n",
+      "table_page_title               52426 non-null object\n",
+      "table_page_url                 52426 non-null object\n",
+      "dtypes: float64(1), object(12)\n",
+      "memory usage: 5.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tables.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85900it [00:12, 6724.10it/s]\n"
+      "52426it [00:06, 8636.09it/s]\n"
      ]
     }
    ],
@@ -136,13 +185,13 @@
     "\n",
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    tables_ids.append(row['table_id'])\n",
-    "    tables_title.append(row['table_page_title']+\" \"+row['table_page_summary']+\" \"+row['table_page_keywords'])"
+    "    tables_ids.append(row['table_page_url'])\n",
+    "    tables_title.append(row['table_page_title']+\" \"+row['table_page_content'][0:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [06:50<00:00,  2.47it/s]\n"
+      "100%|██████████| 148/148 [00:32<00:00,  4.46it/s]\n"
      ]
     }
    ],
@@ -296,9 +345,9 @@
     "    for accuracyK in top_k:\n",
     "        \n",
     "        selected_top = df_tables_sorting.head(accuracyK)\n",
-    "        min_score = selected_top['table_score'].max()\n",
-    "        draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
-    "        final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "#         min_score = selected_top['table_score'].max()\n",
+    "#         draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
+    "        final_ranked_tables = selected_top.iloc[:,0:1].values\n",
     "        \n",
     "        accuracy_value = get_accuracy(final_ranked_tables,idQueryGoal)\n",
     "        \n",
@@ -308,17 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1647\n",
-      "0.2729\n",
-      "0.3148\n",
-      "0.3694\n"
+      "0.2838\n",
+      "0.5338\n",
+      "0.5946\n",
+      "0.6419\n"
      ]
     }
    ],
