--- a/new_york_experiments/table_retrieval_newyork_title_main_passage.ipynb
+++ b/new_york_experiments/table_retrieval_newyork_title_main_passage.ipynb
@@ -54,8 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_articles = pd.read_csv('../dataset/new_york_dataset/article_data_newyork', delimiter=',', header=None)\n",
-    "data_articles = raw_articles.iloc[:,:].values"
+    "raw_articles = pd.read_csv('dataset/test_articles_dataset_newyork.csv', delimiter=',')"
    ]
   },
   {
@@ -65,7 +64,8 @@
    "outputs": [],
    "source": [
     "# embedding_model = gs.models.FastText.load_fasttext_format('../pre_trained_models/cc.en.300.bin')\n",
-    "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')"
+    "# embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')\n",
+    "embedding_model = gs.models.FastText.load('train_embedding_model/fasttext_embedding_50d_all_signals_newyorkdata')"
    ]
   },
   {
@@ -86,13 +86,13 @@
    ],
    "source": [
     "indexing_tables.indices.close(index='data_table_newyork')\n",
-    "indexing_tables.indices.put_settings(index='data_table_newyork', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
+    "indexing_tables.indices.put_settings(index='data_table_newyork', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
     "indexing_tables.indices.open(index='data_table_newyork')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,14 +101,14 @@
     "    result= indexing_tables.search(\n",
     "        index=\"data_table_newyork\", \n",
     "        body = {\n",
-    "        \"_source\": [\"table_url\",\"table_page_title\"],\n",
+    "        \"_source\": [\"table_url\",\"table_page_title\",\"table_page_content\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : 70,\n",
+    "        \"size\" : 30,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [\"table_page_title\",\"table_page_content\"] \n",
+    "              \"fields\": [\"table_page_title\",\"table_page_content\",\"table_page_keywords\"] \n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 31\n",
+    "MAX_PAD = 55\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -164,6 +164,7 @@
     "    if len(value) < MAX_PAD:\n",
     "        \n",
     "        embedding = embedding_model.wv[value]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        padding_embedding = sequence_padding(embedding.shape[0],embedding)\n",
     "        \n",
@@ -172,6 +173,7 @@
     "    else:\n",
     "        \n",
     "        embedding = embedding_model.wv[value[0:MAX_PAD]]\n",
+    "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
    ]
@@ -193,31 +195,68 @@
     "        table_ID = hit['_source']['table_url']\n",
     "        \n",
     "        table_page_title = hit['_source']['table_page_title']\n",
+    "        \n",
+    "        table_page_cotent = hit['_source']['table_page_content'][0:1000]\n",
     "    \n",
-    "        tables_index.append([table_ID,table_page_title])\n",
+    "        tables_index.append([table_ID,table_page_title,table_page_cotent])\n",
     "    \n",
     "    return tables_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('best_model_title_affinity_1_1_08_0.9499.h5')"
+    "# affinity_model_title_main_passage_30_0.9746.h5\n",
+    "# attention_model_title_main_passage_25_0.9686.h5\n",
+    "# coattention_model_title_main_passage_23_0.9744.h5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ranking_model = tf.keras.models.load_model('../model_title_main_passage/coattention_model_title_main_passage_23_0.9744.h5')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 148 entries, 0 to 147\n",
+      "Data columns (total 10 columns):\n",
+      "article_full_text           141 non-null object\n",
+      "article_key_match           148 non-null object\n",
+      "article_keywords            143 non-null object\n",
+      "article_main_passage        148 non-null object\n",
+      "article_meta_description    132 non-null object\n",
+      "article_meta_keywords       58 non-null object\n",
+      "article_summary             141 non-null object\n",
+      "article_tags                54 non-null object\n",
+      "article_title               148 non-null object\n",
+      "article_url                 148 non-null object\n",
+      "dtypes: object(10)\n",
+      "memory usage: 11.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_articles.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,32 +267,42 @@
     "    TOP_K = k\n",
     "    accuracy = []\n",
     "    \n",
-    "    for row_article in tqdm(data_articles):\n",
+    "    for i,row in tqdm(raw_articles.iterrows()):\n",
     "    \n",
     "        article_title = []\n",
+    "        article_main_passage = []\n",
     "        title_table = []\n",
+    "        table_page_content = []\n",
     "        ranked_tables_model = []\n",
     "    \n",
-    "        article_ID = row_article[3]\n",
-    "        article_title_text = str(row_article[1])\n",
-    "        article_main_passage_text = str(row_article[2][0:2000])\n",
+    "        article_ID = row['article_key_match']\n",
+    "        article_title_text = str(row['article_title'])\n",
+    "        article_main_passage_text = str(row['article_main_passage'][0:1000])\n",
+    "        article_meta_description_text = str(row['article_meta_description'])\n",
+    "        article_keywords_text = str(row['article_title'])\n",
+    "        catch = article_title_text+\" \"+article_main_passage_text+\" \"+article_keywords_text\n",
     "        \n",
-    "        \n",
-    "        ranked_tables_index = search_index(article_title_text+\" \"+article_main_passage_text)\n",
+    "        ranked_tables_index = search_index(catch)\n",
     "        \n",
     "        article_title_embedding = create_embedding(article_title_text)\n",
+    "        article_main_passage_embedding = create_embedding(article_main_passage_text)\n",
     "        \n",
-    "        for table_ID, table_title in (ranked_tables_index):\n",
+    "        for table_ID, table_title_index, table_page_content_index in (ranked_tables_index):\n",
     "            \n",
-    "            table_title_embedding = create_embedding(str(table_title))\n",
+    "            table_title_embedding = create_embedding(str(table_title_index))\n",
+    "            table_page_content_embedding = create_embedding(str(table_page_content_index))\n",
     "            \n",
     "            article_title.append(article_title_embedding)\n",
+    "            article_main_passage.append(article_main_passage_embedding)\n",
     "            title_table.append(table_title_embedding)\n",
+    "            table_page_content.append(table_page_content_embedding)\n",
     "    \n",
     "        article_title = np.array(article_title)\n",
+    "        article_main_passage = np.array(article_main_passage)\n",
     "        title_table = np.array(title_table)\n",
+    "        table_page_content = np.array(table_page_content)\n",
     "    \n",
-    "        table_ranking_model = ranking_model.predict([article_title,title_table])\n",
+    "        table_ranking_model = ranking_model.predict([article_title,article_main_passage,title_table,table_page_content])\n",
     "    \n",
     "        for i in range(0,len(table_ranking_model)):\n",
     "        \n",
@@ -270,30 +319,27 @@
     "           \n",
     "        accuracy.append(get_accuracy(article_ID, final_ranked_tables))\n",
     "        \n",
-    "    result.append([\"Acc@\"+str(k),str(round(np.mean(accuracy),4))])\n",
-    "    #print(\"\")\n",
-    "    #print(\"Acc@\"+str(k))\n",
-    "    #print(str(round(np.mean(accuracy),4)))\n",
-    "    #print(accuracy)"
+    "    result.append([\"Acc@\"+str(k),str(round(np.mean(accuracy),4))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 148/148 [00:13<00:00, 11.36it/s]\n",
-      "100%|██████████| 148/148 [00:10<00:00, 13.58it/s]\n",
-      "100%|██████████| 148/148 [00:11<00:00, 13.52it/s]\n"
+      "148it [00:24,  8.12it/s]\n",
+      "148it [00:19,  7.76it/s]\n",
+      "148it [00:19,  7.93it/s]\n",
+      "148it [00:19,  8.27it/s]\n"
      ]
     }
    ],
    "source": [
-    "accuracy_K = [1,5,10]\n",
+    "accuracy_K = [1,5,10,20]\n",
     "\n",
     "for k in accuracy_K:\n",
     "     \n",
@@ -302,16 +348,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.3649'], ['Acc@5', '0.4932'], ['Acc@10', '0.5473']]"
+       "[['Acc@1', '0.1959'],\n",
+       " ['Acc@5', '0.277'],\n",
+       " ['Acc@10', '0.3649'],\n",
+       " ['Acc@20', '0.5608']]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,29 +381,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# affinity\n",
-    "# [['Acc@1', '0.3716'], ['Acc@5', '0.5135'], ['Acc@10', '0.5743']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## attention\n",
-    "## [['Acc@1', '0.3311'], ['Acc@5', '0.473'], ['Acc@10', '0.5541']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##[['Acc@1', '0.277'], ['Acc@5', '0.4324'], ['Acc@10', '0.5338']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
