models catch all

--- a/baselines/model_elasticsearch_bm25.ipynb
+++ b/baselines/model_elasticsearch_bm25.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
-    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
+    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
     "indexing_distinct_tables.indices.open(index='distinct_tables')"
    ]
   },
