finish the models using attributes correlation

--- a/model_title_main_passage_attributes_correlation/table_retrieval_title_main_passage_attributes_correlation.ipynb
+++ b/model_title_main_passage_attributes_correlation/table_retrieval_title_main_passage_attributes_correlation.ipynb
@@ -161,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD_TITLE = 118\n",
+    "MAX_PAD_TITLE = 55\n",
     "\n",
     "def sequence_padding_title(X_DIM, value):\n",
     "    \n",
@@ -203,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD_MAIN_PASSAGE = 118\n",
+    "MAX_PAD_MAIN_PASSAGE = 55\n",
     "\n",
     "def sequence_padding_main_passage(X_DIM, value):\n",
     "    \n",
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('affinity_model_title_main_passage_13_0.9764.h5')"
+    "ranking_model = tf.keras.models.load_model('attention_model_title_main_passage_attributes_correlation_39_0.9658.h5')"
    ]
   },
   {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,19 +372,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [26:48,  1.86s/it]\n"
+      "1026it [02:22,  7.51it/s]\n",
+      "1026it [02:22,  7.47it/s]\n",
+      "1026it [02:20,  7.37it/s]\n",
+      "1026it [02:22,  7.48it/s]\n"
      ]
     }
    ],
    "source": [
-    "accuracy_K = [1]\n",
+    "accuracy_K = [1,5,10,20]\n",
     "\n",
     "for k in accuracy_K:\n",
     "     \n",
@@ -393,16 +396,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.4503']]"
+       "[['Acc@1', '0.4951'],\n",
+       " ['Acc@5', '0.4981'],\n",
+       " ['Acc@10', '0.5107'],\n",
+       " ['Acc@20', '0.539']]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
