--- a/model_title_main_passage_keywords_attributes_correlation/table_retrieval_title_main_passage_keywords_attributes_correlation.ipynb
+++ b/model_title_main_passage_keywords_attributes_correlation/table_retrieval_title_main_passage_keywords_attributes_correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.0.0-rc0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,20 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -90,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +95,9 @@
     "    result= indexing_distinct_tables.search(\n",
     "        index=\"distinct_tables\", \n",
     "        body = {\n",
-    "        \"_source\": [\"tablePgID\",\"tablePgTitle\",\"tablePgSummary\"],\n",
+    "        \"_source\": [\"tablePgID\",\"tablePgTitle\",\"tablePgSummary\",\"tablePgKeywords\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : 70,\n",
+    "        \"size\" : 100,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
@@ -134,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,13 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "MAX_PAD_TITLE = 55\n",
     "\n",
-    "def sequence_padding_title(X_DIM, value):\n",
+    "def sequence_padding(X_DIM, value):\n",
     "    \n",
     "    value_padding = np.pad(value, ((0,MAX_PAD_TITLE - X_DIM),(0,0)), 'constant')\n",
     "    \n",
@@ -176,68 +154,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embedding_title(value):\n",
-    "\n",
-    "    value = tknzr.tokenize(str(value))\n",
+    "def create_embedding(value):\n",
+    "    \n",
+    "    if value == \"\":\n",
+    "        \n",
+    "        value = [\"\"]\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        value = tknzr.tokenize(str(value))\n",
     "    \n",
     "    if len(value) < MAX_PAD_TITLE:\n",
     "        \n",
     "        embedding = embedding_model.wv[value]\n",
     "        embedding = embedding.astype('float16')\n",
     "        \n",
-    "        padding_embedding = sequence_padding_title(embedding.shape[0],embedding)\n",
+    "        padding_embedding = sequence_padding(embedding.shape[0],embedding)\n",
     "        \n",
     "        return padding_embedding\n",
     "        \n",
     "    else:\n",
     "        \n",
     "        embedding = embedding_model.wv[value[0:MAX_PAD_TITLE]]\n",
-    "        embedding = embedding.astype('float16')\n",
-    "        \n",
-    "        return embedding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MAX_PAD_MAIN_PASSAGE = 55\n",
-    "\n",
-    "def sequence_padding_main_passage(X_DIM, value):\n",
-    "    \n",
-    "    value_padding = np.pad(value, ((0,MAX_PAD_MAIN_PASSAGE - X_DIM),(0,0)), 'constant')\n",
-    "    \n",
-    "    return value_padding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_embedding_main_passage(value):\n",
-    "    \n",
-    "    value = tknzr.tokenize(str(value))\n",
-    "    \n",
-    "    if len(value) < MAX_PAD_MAIN_PASSAGE:\n",
-    "        \n",
-    "        embedding = embedding_model.wv[value]\n",
-    "        embedding = embedding.astype('float16')\n",
-    "        \n",
-    "        padding_embedding = sequence_padding_main_passage(embedding.shape[0],embedding)\n",
-    "        \n",
-    "        return padding_embedding\n",
-    "        \n",
-    "    else:\n",
-    "        \n",
-    "        embedding = embedding_model.wv[value[0:MAX_PAD_MAIN_PASSAGE]]\n",
     "        embedding = embedding.astype('float16')\n",
     "        \n",
     "        return embedding"
@@ -252,7 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,29 +225,12 @@
     "        table_page_title = hit['_source']['tablePgTitle']\n",
     "        \n",
     "        table_page_main_passage = hit['_source']['tablePgSummary']\n",
+    "        \n",
+    "        table_page_keywords = hit['_source']['tablePgKeywords']\n",
     "    \n",
-    "        tables_index.append([table_ID,table_page_title,table_page_main_passage])\n",
+    "        tables_index.append([table_ID,table_page_title,table_page_main_passage, table_page_keywords])\n",
     "    \n",
     "    return tables_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    }
-   ],
-   "source": [
-    "ranking_model = tf.keras.models.load_model('coattention_model_title_main_passage_23_0.9744.h5')"
    ]
   },
   {
@@ -299,11 +238,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ranking_model = tf.keras.models.load_model('coattention_model_title_main_passage_keywords_1_1_39_0.9740.h5')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_articles.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,38 +269,49 @@
     "        article_ID = row['page_id']\n",
     "        article_title_text = row['page_title']\n",
     "        article_main_passage_text = row['meta_description']\n",
+    "        article_keywords_text = row['keywords'] \n",
     "        \n",
     "        query = row['page_title']+\" \"+row['meta_description']+\" \"+row['keywords']\n",
     "        \n",
     "        article_title = []\n",
     "        article_main_passage = []\n",
+    "        article_keywords = []\n",
     "        table_title = []\n",
     "        table_main_passage = []\n",
+    "        table_keywords = []\n",
     "        ranked_tables_model = []\n",
     "\n",
     "        ranked_tables_index = search_index(query)\n",
     "        \n",
     "        if len(ranked_tables_index) > 0:\n",
     "            \n",
-    "            article_title_embedding = create_embedding_title(article_title_text)\n",
-    "            article_main_passage_embedding = create_embedding_main_passage(article_main_passage_text)\n",
+    "            article_title_embedding = create_embedding(article_title_text)\n",
+    "            article_main_passage_embedding = create_embedding(article_main_passage_text)\n",
+    "            article_keywords_embedding = create_embedding(article_keywords_text)\n",
     "            \n",
-    "            for table_ID, index_table_title, index_table_main_passage in (ranked_tables_index):\n",
-    "                    \n",
-    "                table_title_embedding = create_embedding_title(str(index_table_title))\n",
-    "                table_main_passage_embedding = create_embedding_main_passage(str(index_table_main_passage))\n",
-    "\n",
+    "            for table_ID, index_table_title, index_table_main_passage, index_table_keywords in (ranked_tables_index):\n",
+    "                       \n",
+    "                table_title_embedding = create_embedding(str(index_table_title))\n",
+    "                table_main_passage_embedding = create_embedding(str(index_table_main_passage))\n",
+    "                table_keywords_embedding = create_embedding(str(index_table_keywords))\n",
+    "                \n",
     "                article_title.append(article_title_embedding)\n",
     "                article_main_passage.append(article_main_passage_embedding)\n",
+    "                article_keywords.append(article_keywords_embedding)\n",
+    "                \n",
     "                table_title.append(table_title_embedding)\n",
     "                table_main_passage.append(table_main_passage_embedding)\n",
+    "                table_keywords.append(table_keywords_embedding)\n",
     "\n",
     "            article_title = np.array(article_title, dtype='float16')\n",
     "            article_main_passage = np.array(article_main_passage, dtype='float16')\n",
+    "            article_keywords = np.array(article_keywords, dtype='float16')\n",
+    "            \n",
     "            table_title = np.array(table_title, dtype='float16')\n",
     "            table_main_passage = np.array(table_main_passage, dtype='float16')\n",
+    "            table_keywords = np.array(table_keywords, dtype='float16')\n",
     "           \n",
-    "            table_ranking_model = ranking_model.predict([article_title, article_main_passage, table_title, table_main_passage])\n",
+    "            table_ranking_model = ranking_model.predict([article_title, article_main_passage, article_keywords, table_title, table_main_passage, table_keywords])\n",
     "\n",
     "            for i in range(0,len(table_ranking_model)):\n",
     "\n",
@@ -372,20 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1026it [04:55,  3.39it/s]\n",
-      "1026it [04:48,  3.54it/s]\n",
-      "1026it [04:51,  3.52it/s]\n",
-      "1026it [04:47,  3.76it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy_K = [1,5,10,20]\n",
     "\n",
@@ -396,23 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Acc@1', '0.4415'],\n",
-       " ['Acc@5', '0.4659'],\n",
-       " ['Acc@10', '0.5'],\n",
-       " ['Acc@20', '0.5526']]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result"
    ]
