test the models on new york dataset

--- a/new_york_experiments/table_retrieval_newyork_title_main_passage_keywords1.ipynb
+++ b/new_york_experiments/table_retrieval_newyork_title_main_passage_keywords1.ipynb
@@ -59,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')\n",
-    "embedding_model = gs.models.FastText.load('train_embedding_model/fasttext_embedding_50d_all_signals_newyorkdata')"
+    "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')\n",
+    "# embedding_model = gs.models.FastText.load('train_embedding_model/fasttext_embedding_50d_all_signals_newyorkdata')"
    ]
   },
   {
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('../model_title_main_passage_keywords/attention_model_title_main_passage_keywords_1_1_23_0.9844.h5')"
+    "ranking_model = tf.keras.models.load_model('../model_title_main_passage_keywords/coattention_model_title_main_passage_keywords_1_1_39_0.9740.h5')"
    ]
   },
   {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,17 +348,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "148it [00:28,  6.42it/s]\n",
-      "148it [00:23,  6.35it/s]\n",
-      "148it [00:23,  6.25it/s]\n",
-      "148it [00:22,  6.54it/s]\n"
+      "148it [00:36,  4.28it/s]\n",
+      "148it [00:38,  3.89it/s]\n",
+      "148it [00:40,  3.70it/s]\n",
+      "148it [00:38,  3.84it/s]\n"
      ]
     }
    ],
@@ -372,19 +372,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.3243'],\n",
-       " ['Acc@5', '0.4122'],\n",
-       " ['Acc@10', '0.4932'],\n",
-       " ['Acc@20', '0.6554']]"
+       "[['Acc@1', '0.3514'],\n",
+       " ['Acc@5', '0.5135'],\n",
+       " ['Acc@10', '0.6149'],\n",
+       " ['Acc@20', '0.777']]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
